# paqFe-RTL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sbt  build.sc  verify.sh
driver/: CMakeLists.txt  driver_test.sh  enwik8.sh  main.cpp  makefile  size_test.sh  xdma_test.cpp
sim/: README  sim.proj  sim.sh
sim/src/: tb.sv
src/main/resources/: bytewrite_dp_ram.v  bytewrite_tdp_ram.v  ultraram.v
src/main/scala/: ClockCrossing.scala  Compressor.scala  Mixer.scala  Packet.scala  ProbGatterScatter.scala  compressor.scala  suqashstrech.scala  types.scala
src/main/scala/coder/: Arithcoder.scala  arithcoder.scala
src/main/scala/mixer/: Bundles.scala  Layer1.scala  Layer2.scala  Mixer.scala  PE.scala  Parameter.scala  bundles.scala  mixer.scala  parameter.scala  suqashstrech.scala  unit.scala
src/main/scala/models/: ContextMap.scala  Model.scala  Orders.scala  TabHash.scala  TabHashGen.scala  order1.scala
src/main/scala/ram/: AsyncQueue.scala  ram.scala
src/main/scala/state/: State.scala  StateMap.scala  StaticStateMap.scala
src/main/scala/util/: AsyncQueue.scala  CRC.scala  Ram.scala  ReadyValid.scala  TreeReduce.scala  UniqueQueue.scala
src/test/resources/: generate_verify_db.sh  verify.sh
src/test/scala/: CompressorSpec.scala  Helpers.scala  Mixer.scala  PacketSpec.scala  compressor.scala  helpers.scala
src/test/scala/coder/: ArithcoderSpec.scala  arithcoder.scala
src/test/scala/mixer/: Layer1Spec.scala  Layer2.scala  MixerSpec.scala  (+3 more)
verify/: CMakeLists.txt  genDB.sh  make-verify-data.sh
verify/src/: crc.cpp  orders.cpp  ordersctx.cpp
(+13 files in other folders)
